# kubernetes-operator

./: .coveragerc  .dockerignore  .envrc  .envrc.local.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CLAUDE.md  DEVELOPER.md  Dockerfile  Makefile  README.md  codecov.yml  conftest.py  go.mod  go.sum  main.py  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: automerge-dependabot.yaml  ci.yaml  release.yaml  stale.yaml  verify-pr.yaml  vulnerability-monitor.yaml
app/: conftest.py  crds.py  dockerhub.py  settings.py  typedefs.py  utils.py  utils_k8s.py
app/api/: __init__.py  client.py  client_certificate_authorities.py  client_connectors.py  client_gateways.py  client_groups.py  client_remote_networks.py  client_resources.py  client_resources_access.py  client_service_accounts.py  client_users.py  exceptions.py  protocol.py
app/api/tests/: conftest.py  factories.py  test_client.py  test_client_certificate_authorities.py  test_client_connectors.py  test_client_gateways.py  test_client_groups.py  test_client_remote_networks.py  test_client_resource_access.py  test_client_resources.py  test_client_service_accounts.py  test_client_users.py  test_connectors.py
app/handlers/: __init__.py  base.py  handlers_certificate_authorities.py  handlers_connectors.py  handlers_gateways.py  handlers_groups.py  handlers_resource.py  handlers_resource_access.py  handlers_secrets.py  handlers_services.py
app/handlers/tests/: conftest.py  test_handlers.py  test_handlers_certificate_authorities.py  test_handlers_connector.py  test_handlers_gateways.py  test_handlers_group.py  test_handlers_resource.py  test_handlers_resource_access.py  test_handlers_secrets.py  test_handlers_services.py  test_pod_labels_fix.py
app/tests/: test_crds.py  test_crds_certificate_authority.py  test_crds_connector.py  test_crds_gateway.py  test_crds_group.py  test_crds_resource.py  test_crds_resourceaccess.py  test_dockerhub.py  test_settings.py  test_utils.py  test_utils_k8s.py
app/tests/__snapshots__/: test_dockerhub.ambr
app/tests/test_data/: dockerhub_connector_tags_response.json  dockerhub_tags_response.json
app/version_policy_providers/: __init__.py  base.py  dockerhub.py  google.py
app/version_policy_providers/tests/: test_base.py  test_dockerhub.py  test_google.py
app/version_policy_providers/tests/data/: dockerhub_connector_tags_response.json  dockerhub_operator_tags_response.json
deploy/: golden_test.go
deploy/test/golden/: apikey.golden.yaml  apikey.yaml  defaultResourceTags.golden.yaml  defaultResourceTags.yaml  error-missingRemoteNetwork-name-or-id.golden.yaml  error-missingRemoteNetwork-name-or-id.yaml  error-too-many-remotenetwork-definitions.golden.yaml  error-too-many-remotenetwork-definitions.yaml  existingAPIKeySecret.golden.yaml  existingAPIKeySecret.yaml  existingRemoteNetworkIdSecret.golden.yaml  existingRemoteNetworkIdSecret.yaml  extraEnvVars.golden.yaml  extraEnvVars.yaml  logVerbosity.golden.yaml  logVerbosity.yaml  podLabels.golden.yaml  podLabels.yaml  pre-delete-cleanup.golden.yaml  pre-delete-cleanup.yaml  priorityClassName.golden.yaml  priorityClassName.yaml  rbac-createAggregateClusterRoles.golden.yaml  rbac-createAggregateClusterRoles.yaml  remoteNetworkName.golden.yaml  remoteNetworkName.yaml  withConnectors.golden.yaml  withConnectors.yaml  withConnectorsCustomSchedule.golden.yaml  withConnectorsCustomSchedule.yaml
deploy/twingate-operator/: Chart.yaml  values.schema.json  values.yaml
deploy/twingate-operator/crds/: twingate.com.twingatecertificateauthority.yaml  twingate.com.twingateconnector.yaml  twingate.com.twingategateway.yaml  twingate.com.twingategroup.yaml  twingate.com.twingateresourceaccesses.yaml  twingate.com.twingateresources.yaml
deploy/twingate-operator/templates/: _helpers.tpl  aggregate-clusterroles.yaml  clusterrole.yaml  clusterrolebinding.yaml  connectors.yaml  deployment.yaml  pdb.yaml  pre-delete-cleanup.yaml  secrets.yaml  serviceaccount.yaml
deploy/twingate-operator/tests/: aggregate-clusterroles_test.yaml  default_values_test.yaml  deployment_api_key_test.yaml  deployment_network_test.yaml  deployment_optional_values_test.yaml  deployment_remote_network_test.yaml  deployment_test.yaml  gateway_test.yaml  kubernetes-access-gateway_test.yaml  pdb_test.yaml  pre-delete-cleanup_test.yaml  snapshot_test.yaml  values.test.yaml
deploy/twingate-operator/tests/__snapshot__/: aggregate-clusterroles_test.yaml.snap  default_values_test.yaml.snap  deployment_test.yaml.snap  kubernetes-access-gateway_test.yaml.snap  pre-delete-cleanup_test.yaml.snap  snapshot_test.yaml.snap
docs/: gateway.md
examples/: access.yaml  certificate-authority.yaml  connector.yaml  gateway.yaml  group.yaml  resource-with-gateway.yaml  resource.yaml  service.yaml
scripts/: dangerfile.js  minikube-smoketests.sh  release.sh  split_semver.sh
tests_integration/: conftest.py  test_connector_flows.py  test_crds.py  test_crds_certificate_authority.py  test_crds_connector.py  test_crds_gateway.py  test_crds_group.py  test_crds_resource.py  test_crds_resourceaccess.py  test_gateway_flows.py  test_main.py  test_resource_flows.py  test_service_flows.py  utils.py
