[tool.poetry]
name = "twingate-operator"
version = "0.28.0"
description = ""
authors = ["Eran Kampf <eran@twingate.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
croniter = "^6.0.0"
google-cloud-artifact-registry = "^1.18.0"
gql = {version = "~=4.0.0", extras = ["requests"]}
kopf = "^1.38.0"
kubernetes = "^34.1.0"
orjson = "^3.11.5"
pendulum = "^3.1.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
requests = "^2.32.5"
semantic-version = "^2.10.0"
tenacity = "^9.1.2"
cryptography = "^46.0.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bandit = "^1.9.2"
coveralls = "^4.0.2"
factory-boy = "^3.3.3"
mypy = "^1.19.0"
pre-commit = "^4.5.0"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-datadir = "^1.8.0"
pytest-factoryboy = "^2.8.1"
pytest-randomly = "^4.0.1"
pytest-sugar = "^1.1.1"
pyupgrade = "^3.21.2"
responses = "^0.25.8"
ruff = "^0.14.8"
syrupy = "^5.0.0"
types-croniter = "^6.0.0.20250809"
types-requests = "^2.32.4.20250913"
types-pyyaml = "^6.0.12.20250915"
[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
python-semantic-release = "^10.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
targets = ["app"]
recursive = true
exclude = ["tests"]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.mypy]
plugins = ["pydantic.mypy"]
allow_redefinition = false
check_untyped_defs = false
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
no_implicit_reexport = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

exclude = [
    "/tests",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration",
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff.lint]
select = [
    "D",
    "I", # isort
    "F", # Pyflakes
    "E", "W", # pycodestyle
    "ASYNC", # flake8-async
    "S", # flake8-bandit
    "Q", # flake8-quotes
    "G", # flake8-logging-format
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "FBT", # flake8-boolean-trap
    "PERF", # Perflint
    "PT", # flake8-pytest-style
    "PIE", # flake8-pie
    "RSE", # flake8-raise
    "YTT", # flake8-2020
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "LOG", # flake8-logging
    "RET", # flake8-return
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ERA", # eradicate
    "FLY", # flynt
    "UP", # pyupgrade
    "FURB", # refurb
    "PGH", # pygrep-hooks
    "RUF", # Ruff-specific rules
]

ignore = [
    "E501", # line-too-long

    # D100: Missing docstring in public module
    # D101: Missing docstring in public class
    # D102: Missing docstring in public method
    # D103: Missing docstring in public function
    # D104: Missing docstring in public package
    # D105: Missing docstring in magic method
    # D106: Missing docstring in public nested class
    # D107: Missing docstring in __init__
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = [
    "S101", # Use of `assert` detected
    "S106", # Possible hardcoded password assigned to argument
]
"tests_integration/**/*" = [
    "S101", # Use of `assert` detected
    "S106", # Possible hardcoded password assigned to argument
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.semantic_release]
allow_zero_version = true
version_toml = [
    "pyproject.toml:tool.poetry.version",
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.changelog]
mode = "init"
exclude_commit_patterns = [
    "chore: Bumps*",
    "Co-authored-by:*"
]

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "chore", "build"]
